test/errors/traits/trait_method_call_on_unspecified_type/main.sk
module Main {

struct Container[T] {
}

protocol Bar[T] {
    fn bar(self) -> ()
}

fn main() {
    let c = Container();
    c.bar();
}

}